# 3d.view

./: .clang-format  .gitignore  CMakeLists.txt  README.md  setup.sh
assets/wood/: wood.mtl
include/: camera.h  debug.h  light_source.h  mesh.h  model.h  shader_pipeline.h
include/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: camera.cpp  debug.cpp  light_source.cpp  main.cpp  mesh.cpp  model.cpp  shader_pipeline.cpp
src/shaders/: cubeShader.frag  cubeShader.vert  lightShader.frag  lightShader.vert  modelShader.frag  modelShader.vert  shader.frag  shader.vert  simpleShader.frag
